(library
  (public_name deque)
  (modules
    dequeue steque deck deckrev
    list_like deque_sig deque)
  (libraries
    dequeue_internal
    steque_internal
    deck_internal
    deckrev_internal)
  (instrumentation (backend bisect_ppx)))

(library
  (name dequeue_internal)
  (package deque)
  (modules dequeue_internal)
  (instrumentation (backend bisect_ppx)))

(library
  (name dequeue_arrow)
  (package deque)
  (modules dequeue_arrow)
  (instrumentation (backend bisect_ppx)))

(library
  (name steque_internal)
  (package deque)
  (modules steque_internal)
  (libraries dequeue_internal)
  (instrumentation (backend bisect_ppx)))

(library
  (name deck_internal)
  (package deque)
  (modules deck_internal)
  (libraries dequeue_internal)
  (instrumentation (backend bisect_ppx)))

(library
  (name deckrev_internal)
  (package deque)
  (modules deckrev_internal)
  (libraries dequeue_internal)
  (instrumentation (backend bisect_ppx)))
