(executable
  (name list_like_test)
  (modules list_like_test)
  (libraries deque))

(executable
  (name bench_list)
  (modules bench_list)
  (libraries deque unix))

(executable
  (name bench_append)
  (modules bench_append)
  (libraries deque unix))

(executable
  (name dequeue_test)
  (modules dequeue_test)
  (libraries deque))

(executable
  (name steque_test)
  (modules steque_test)
  (libraries deque))

(executable
  (name deck_test)
  (modules deck_test)
  (libraries deque deck_internal dequeue_internal))

(executable
  (name deckrev_test)
  (modules deckrev_test)
  (libraries deque deckrev_internal dequeue_internal))
